styles.css
@font-face {
  font-family: "jolly";
  src: url("fonts/otf/jolly-traveler-jolly-traveler-svg-400.otf");
}

@font-face {
  font-family: "subway";
  src: url("fonts/SUBWT___.ttf");
}

* {
  box-sizing: border-box;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 100px;
  margin: 0;
  background-image: url("https://images.unsplash.com/photo-1585314062340-f1a5a7c9328d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80");
  background-size: contain;
  overflow: scroll;
}

.menu {
  padding: 20px;
  height: 960px;
  font-family: "jolly";
  font-size: 100px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  border-image: conic-gradient(red, yellow, lime, aqua, blue, magenta, red) 1;
  border-style: solid;
  min-width: 700px;
}

.title {
  margin: 0;
}

label {
  color: whitesmoke;
  font-family: subway;
  font-size: 36px;
}

label[for="color"] {
  display: flex;
  align-items: center;
  gap: 50px;
}

/*------ Style 2 ------*/
#color {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  width: 75px;
  height: 75px;
  border: none;
  cursor: pointer;
}
#color::-webkit-color-swatch {
  border-radius: 50%;
  border: 5px solid #000000;
}
#color::-moz-color-swatch {
  border-radius: 50%;
  border: 5px solid #000000;
}

#slider {
  display: flex;
  justify-content: space-around;
}

input[type="range"] {
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  cursor: pointer;
  width: 500px;
}

/***** Track Styles *****/
/***** Chrome, Safari, Opera, and Edge Chromium *****/
input[type="range"]::-webkit-slider-runnable-track {
  background: whitesmoke;
  border-radius: 50px;
  height: 0.5rem;
}

/******** Firefox ********/
input[type="range"]::-moz-range-track {
  background: whitesmoke;
  border-radius: 50px;
  height: 0.5rem;
  width: 500px;
}

/***** Thumb Styles *****/
/***** Chrome, Safari, Opera, and Edge Chromium *****/
input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none; /* Override default look */
  appearance: none;
  margin-top: -12px; /* Centers thumb on the track */
  background-color: whitesmoke;
  height: 2rem;
  width: 1rem;
}

/***** Firefox *****/
input[type="range"]::-moz-range-thumb {
  border: none; /*Removes extra border that FF applies*/
  border-radius: 50px; /*Removes default border-radius that FF applies*/
  background-color: whitesmoke;
  height: 1.5rem;
  width: 1.5rem;
}

/***** Focus Styles *****/
/* Removes default focus */
input[type="range"]:focus {
  outline: none;
}

/***** Chrome, Safari, Opera, and Edge Chromium *****/
input[type="range"]:focus::-webkit-slider-thumb {
  border: 1px solid gainsboro;
  outline: 3px solid gainsboro;
  outline-offset: 0.125rem;
}

/******** Firefox ********/
input[type="range"]:focus::-moz-range-thumb {
  border: 1px solid gainsboro;
  outline: 3px solid gainsboro;
  outline-offset: 0.125rem;
}

.container {
  width: 960px;
  height: 960px;
  display: flex;
  flex-direction: column;
  padding: 0;
  margin: 0;
  border-image: conic-gradient(red, yellow, lime, aqua, blue, magenta, red) 1;
  border-style: solid;
  flex: none;
}

.row {
  width: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  flex: auto;
}

.box {
  margin: 0;
  border: 1px solid black;
  flex: auto;
  padding: 1px;
}

.eraser {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
}

.special-modes {
  display: flex;
  justify-content: space-between;
  margin: 50px 0;
}

input[type="checkbox"] {
  background-color: transparent;
  margin-right: 20px;
  margin-bottom: -10px;
  font: inherit;
  color: currentColor;
  width: 1.15em;
  height: 1.15em;
  border: 0.15em solid currentColor;
  border-radius: 0.15em;
  transform: translateY(-0.075em);
}

button {
  width: 40%;
  height: 4em;
  font-size: 25px;
  font-family: subway;
  color: whitesmoke;
  background-color: black;
  cursor: pointer;
}

